# btz-sonic-alchemy

./: .clang-tidy  .cursorrules  .gitignore  BTZ_COMPLETE_BUILD_REPORT.md  BTZ_COMPREHENSIVE_ETA_AND_ACTION_PLAN.md  BTZ_COMPREHENSIVE_TEST_RESULTS.md  BTZ_GUI_Layout.json  BTZ_LABS_PHASE_0_COMPLETE.md  BTZ_LABS_PHASE_0_ENGINEERING_BRIEF.md  BTZ_PHASE_1_CODE_COMPLETE_SUMMARY.md  BTZ_PHASE_1_EXECUTION_SUMMARY.md  BTZ_PHASE_1_SHIP_GATE_REPORT.md  BTZ_SHIP_READINESS_GAP_ANALYSIS.md  CHANGELOG.md  CMakePresets.json  DSP_FAILURE_ANALYSIS_AND_FIXES.md  DSP_REPAIR_PHASE1-2_COMPLETE.md  HOW_TO_RUN_BTZ.md  INTEGRATION_CHECKLIST.md  MERGE_ALL_PR.md  PR_DESCRIPTION.md  README.md  SHIP_GATE_DASHBOARD.md  SHIP_GATE_REPORT.md  index.html  tailwind.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml  build-and-validate.yml
.memory/: 00_PROJECT_OVERVIEW.md  01_ARCHITECTURE.md  02_DECISIONS_LOG.md  03_FEATURE_REGISTRY.md  04_KNOWN_BUGS.md  05_ROADMAP.md  06_ENVIRONMENT_SETUP.md  07_API_SCHEMA.md  08_UI_SYSTEM.md  09_DEPLOYMENT.md  10_PROMPT_HISTORY.md  memory_index.md
.memory/sessions/: session_2026_02_13.md
.memory/versions/: v1.0.md  v1.1.md
BTZ/: CMakeLists.txt
BTZ/Source/: AdvancedProcessingChain.h  BassEnhancer.cpp  BassEnhancer.h  ConsoleEmulator.cpp  DeepFilterNet.cpp  GranularProcessor.cpp  MultiFilterDelay.cpp  NeuralNetwork.h  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TransientShaper.cpp  WaveShaper.cpp
BTZ_JUCE/: .gitignore  90_PERCENT_INTEGRATION_COMPLETE.md  95_PERCENT_IMPROVEMENT_PLAN.md  95_PLUS_INTEGRATION_PLAN.md  BUILD.md  CMakeLists.txt  CRITICAL_FIXES_IMPLEMENTATION.md  PHASE1_WDF_IMPLEMENTATION.md  PRODUCTION_FIXES_REFERENCE.cpp  PROFESSIONAL_FEATURES_ROADMAP.md  PROJUCER_SETUP.md  README.md  SESSION_SUMMARY.md  TESTING.md  VST3_CHECKLIST_AUDIT.md  VST_PRODUCTION_AUDIT.md  WORLD_CLASS_IMPROVEMENTS.md  WORLD_CLASS_POLISH_PLAN.md  validation_complete.txt  validation_output.txt  validation_results.txt
BTZ_JUCE/Source/: ABComparison.h  AutoDebugger.h  LicenseSystem.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor_IMPROVED.cpp  PluginProcessor_PRODUCTION.h  ProductionSafety.h
BTZ_JUCE/Source/DSP/: AdvancedSaturation.cpp  AdvancedSaturation.h  AdvancedTransientShaper.cpp  AdvancedTransientShaper.h  ComponentVariance.cpp  ComponentVariance.h  ConsoleEmulator.cpp  ConsoleEmulator.h  DeterministicProcessing.cpp  DeterministicProcessing.h  EnhancedSHINE.cpp  EnhancedSHINE.h  EnhancedSPARK.cpp  EnhancedSPARK.h  LUFSMeter.cpp  LUFSMeter.h  LongTermMemory.cpp  LongTermMemory.h  Oversampling.cpp  Oversampling.h  OversamplingManager.cpp  OversamplingManager.h  ParameterSmoother.h  PerformanceGuardrails.cpp  PerformanceGuardrails.h  RBJFilters.h  SafetyLayer.cpp  SafetyLayer.h  Saturation.cpp  Saturation.h  ShineEQ.cpp  ShineEQ.h  SparkLimiter.cpp  SparkLimiter.h  StereoEnhancement.cpp  StereoEnhancement.h  SubHarmonic.cpp  SubHarmonic.h  TPTFilters.h  TransientShaper.cpp  (+3 more)
BTZ_JUCE/Source/GUI/: BTZButton.cpp  BTZButton.h  BTZKnob.cpp  BTZKnob.h  BTZTheme.h  MainView.cpp  MainView.h  MeterStrip.cpp  MeterStrip.h  ThermalKnob.cpp  ThermalKnob.h
BTZ_JUCE/Source/Parameters/: PluginParameters.h
BTZ_JUCE/Source/Utilities/: DSPConstants.h  DSPValidation.h
BTZ_JUCE/Source/Utility/: PresetManager.cpp  PresetManager.h
BTZ_JUCE/scripts/: run_pluginval.ps1  run_pluginval.sh  setup_juce.sh  validate_build.sh
BTZ_JUCE/tests/: CMakeLists.txt  automation_torture_test.cpp  bypass_bitperfect_test.cpp  lifecycle_stress_test.cpp  parameter_conversion_test.cpp  state_roundtrip_test.cpp
BTZ_JUCE/tests/dsp/: test_AdvancedSaturation.cpp  test_EnhancedSHINE.cpp  test_EnhancedSPARK.cpp  test_LUFSMeter.cpp  test_ParameterSmoother.cpp  test_TransientShaper.cpp  test_main.cpp
BTZ_JUCE/tests/manual_daw_tests/: README.md  collect_results.sh
BTZ_JUCE/tools/: CMakeLists.txt  README.md  offline_render.cpp  test_determinism.ps1  test_determinism.sh
artifacts/auval/: auval.txt
btz-sonic-alchemy-main/: README.md
btz-sonic-alchemy-main/BTZ/: CMakeLists.txt  CMakeLists_OLD_20260213_223041.txt  README.md  VST_DEV_AND_INSTALL.md
btz-sonic-alchemy-main/BTZ/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
btz-sonic-alchemy-main/BTZ/Source_OLD_20260213_223041/: ConsoleEmulator.h  GateProcessor.cpp  LimiterNo6.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TimbralTransfer.h  TransientShaper.h
commands/: resume.md  update-memory.md
docs/: ADAPTIVE_WIRING.md  ARCHITECTURE.md  AUDIT_TRUTH_TABLE_2026-01-14.md  BETA_TEST_GUIDE.md  Build.md  CHAIN_VERIFICATION.md  CI_CROSS_PLATFORM_AUDIT_2026-01-14.md  COMPREHENSIVE_WORK_PLAN.md  CompetitiveAnalysis.md  DAW_SUPPORT.md  DISABLED_MODULES.md  DISABLED_MODULES_DECISION.md  ImplementationRoadmap.md  LEGAL_SAFE_DESIGN.md  Measurements.md  Metering.md  OPEN_SOURCE_RECON.md  P1_SPRINT_REPORT_2026-01-15.md  P2_ACCEPTANCE.md  P2_DESIGN.md  P2_REQUIREMENTS.md  P2_TASK_BREAKDOWN.md  PARAMETER_MANIFEST.md  PRESETS.md  PROGRESS_REPORT_2026-01-13.md  PROGRESS_REPORT_2026-01-14.md  PerformanceTargets.md  Presets.md  QA_CHECKLIST.md  QUICK_WINS_2026-01-15.md  QuickStart.md  RT_SAFETY_MANIFEST.md  RepoMap.md  ResearchDigest.md  SESSION_SUMMARY_2026-01-08.md  SESSION_SUMMARY_2026-01-14.md  SHIP_GATE_DASHBOARD.md  SHIP_VALIDATION_GUIDE.md  SONIC_REALISM_RESEARCH.md  SOUND_CHARACTER_SPEC.md  (+12 more)
legacy/: README.md
scripts/: build_and_install_windows_vst3.bat  build_macos_release.sh  build_windows_debug_with_vs_env.bat  build_windows_release.bat  build_windows_release.ps1  build_windows_with_vs_env.bat  collect_support_bundle.sh  install_memory_autoupdate.ps1  install_vst3_macos.sh  install_vst3_windows.bat  run_all_benchmarks.sh  run_benchmark.sh  sign_macos.sh  sign_windows.ps1  start_memory_watcher.ps1  update_memory.ps1
src/: index.css  main.tsx
tools/benchmark/: CMakeLists.txt  automation_spike_benchmark.cpp  cpu_benchmark.cpp  load_time_benchmark.cpp
(+128 files in other folders)
